feat(ui): implement tertiary alt content

--- a/src/lib/components/layout/left-column/_styles.less
+++ b/src/lib/components/layout/left-column/_styles.less
@@ -9,7 +9,6 @@
 			align-items: center;
 			font-weight: var(--coo-font-weight-bold);
 			border-bottom: 1px solid var(--coo-secondary-03);
-			padding: 1rem;
 			overflow: hidden;
 			transition: all .2s;
 
@@ -29,6 +28,12 @@
 		}
 
 		&-main-nav-alt-content {
+			color: var(--coo-dark);
+			padding: .5rem;
+			border-bottom: 1px solid var(--coo-secondary-03);
+		}
+
+		&-main-nav-secondary-alt-content {
 			color: var(--coo-dark);
 			padding: .5rem;
 			border-bottom: 1px solid var(--coo-secondary-03);
