feat: add tooltip title

--- a/src/lib/components/tooltip/_styles.less
+++ b/src/lib/components/tooltip/_styles.less
@@ -8,3 +8,15 @@
 	}
 }
 
+
+.c-tooltip-title {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	white-space: nowrap;
+
+	&--align-item-custom {
+		align-items: var(--c-tooltip-title-align-item);
+	}
+}
