--- a/src/lib/components/slider/_styles.less
+++ b/src/lib/components/slider/_styles.less
@@ -2,6 +2,10 @@
 	flex-grow: 1;
 	margin-top: .3rem;
 
+	&.readonly {
+		pointer-events: none;
+		opacity: .8;
+	}
 
 	&:hover {
 		.ant-slider-track {
