--- a/src/lib/components/slider/_styles.less
+++ b/src/lib/components/slider/_styles.less
@@ -21,6 +21,16 @@
 		}
 	}
 
+	&.ant-slider-disabled {
+		.ant-slider-rail {
+			background-color: var(--coo-secondary-02) !important;
+			height: .5rem;
+		}
+		.ant-slider-handle {
+			background: var(--coo-secondary-01);
+		}
+	}
+
 	.ant-slider-rail {
 		background: var(--coo-secondary-02);
 		height: .5rem;
