feat: add type error for <Board />

--- a/src/lib/components/board/_styles.less
+++ b/src/lib/components/board/_styles.less
@@ -300,6 +300,11 @@
 		&-secondary-medium {
 			background: var(--coo-secondary-03);
 		}
+
+		&-error {
+			color: var(--coo-error);
+			background-color: var(--coo-alert-bk);
+		}
 	}
 
 	&--type-rounded {
