fix: add css to manage background dataTable row correctly, update repo name in package.json

--- a/src/lib/components/data-table/_styles.less
+++ b/src/lib/components/data-table/_styles.less
@@ -399,3 +399,7 @@ html body {
 		padding: @rdb-padding-default;
 	}
 }
+
+.ant-table-tbody > tr > td.ant-table-cell-row-hover {
+	background: rgba(var(--coo-rgb-primary), .07) !important;
+}
