--- a/src/lib/components/select/_styles.less
+++ b/src/lib/components/select/_styles.less
@@ -177,6 +177,11 @@
 	}
 }
 
+
+.ant-select:not(.ant-select-customize-input) .ant-select-selector {
+	border-color: var(--coo-secondary-03);
+}
+
 // Antd4 styles
 .ant-select-item-option {
 	&-selected:not(.ant-select-item-option-disabled) {
