--- a/src/styles/_theme.less
+++ b/src/styles/_theme.less
@@ -437,6 +437,14 @@ a:hover {
 	color: var(--coo-primary);
 }
 
+.background--gradient {
+	background: radial-gradient(
+	  95.1% 62.76% at 0% 107.54%,
+	  rgba(var(--coo-rgb-primary), 0.6) 5.31%,
+	  var(--coo-white-bk) 100%
+	);
+  }
+
 @rdb-left-sidebar-width: 15rem;
 @rdb-right-sidebar-width: var(--right-column-width, 15rem);
 @rdb-header-height: 5rem;
