feat(ui): run lint and eslint autofix

--- a/src/lib/components/board/_styles.less
+++ b/src/lib/components/board/_styles.less
@@ -290,7 +290,7 @@
 		}
 
 		&-primary-light {
-			background-color: rgba(var(--coo-rgb-primary), 0.1);
+			background-color: rgba(var(--coo-rgb-primary), .1);
 		}
 
 		&-secondary {
