--- a/src/lib/components/collapse/_styles.less
+++ b/src/lib/components/collapse/_styles.less
@@ -56,7 +56,7 @@
 				font-weight: var(--coo-font-weight-bolder);
 				padding-right: 1rem;
 				display: flex;
-				
+
 
 				.ant-collapse-extra {
 					margin-left: auto;
@@ -86,8 +86,7 @@
 
 		&-position-end > .ant-collapse-item > .ant-collapse-header {
 			padding: 1rem;
-	  	}
-
+		}
 	}
 
 	&--minimal {
@@ -180,11 +179,11 @@
 		&.ant-collapse {
 			.ant-collapse-item {
 				.ant-collapse-header {
-					background-color: var(--coo-rgb-primary,0.1);
+					background-color: var(--coo-rgb-primary, .1);
 				}
 
 				.ant-collapse-content {
-					background-color: var(--coo-rgb-primary,0.1);
+					background-color: var(--coo-rgb-primary, .1);
 				}
 			}
 		}
@@ -194,11 +193,11 @@
 		&.ant-collapse {
 			.ant-collapse-item {
 				.ant-collapse-header {
-					background-color: var(--coo-rgb-primary,0.1);
+					background-color: var(--coo-rgb-primary, .1);
 				}
 
 				.ant-collapse-content {
-					background-color: var(--coo-rgb-primary,0.1);
+					background-color: var(--coo-rgb-primary, .1);
 				}
 			}
 		}
