--- a/src/lib/components/data-table/_styles.less
+++ b/src/lib/components/data-table/_styles.less
@@ -234,7 +234,7 @@
 				}
 
 				&--primary-light {
-					background-color: rgba(var(--coo-rgb-primary), 0.1);
+					background-color: rgba(var(--coo-rgb-primary), .1);
 
 					td {
 						color: var(--coo-dark);
