--- a/src/styles/_theme.less
+++ b/src/styles/_theme.less
@@ -438,12 +438,13 @@ a:hover {
 }
 
 .background--gradient {
-	background: radial-gradient(
-	  95.1% 62.76% at 0% 107.54%,
-	  rgba(var(--coo-rgb-primary), 0.6) 5.31%,
-	  var(--coo-white-bk) 100%
+	background:
+	radial-gradient(
+		95.1% 62.76% at 0% 107.54%,
+		rgba(var(--coo-rgb-primary), .6) 5.31%,
+		var(--coo-white-bk) 100%
 	);
-  }
+}
 
 @rdb-left-sidebar-width: 15rem;
 @rdb-right-sidebar-width: var(--right-column-width, 15rem);
