--- a/src/lib/components/select/_styles.less
+++ b/src/lib/components/select/_styles.less
@@ -182,6 +182,11 @@
 	border-color: var(--coo-secondary-03);
 }
 
+.ant-select-multiple .ant-select-selection-item {
+	background: rgba(var(--coo-rgb-secondary-01), 0.35);
+	border:none;
+}
+
 // Antd4 styles
 .ant-select-item-option {
 	&-selected:not(.ant-select-item-option-disabled) {
