--- a/src/lib/components/menu/_styles.less
+++ b/src/lib/components/menu/_styles.less
@@ -89,6 +89,6 @@
 }
 
 .ant-menu:not(.ant-menu-horizontal) .ant-menu-item-selected {
-	background-color: rgba(var(--coo-rgb-primary), 0.10);
+	background-color: rgba(var(--coo-rgb-primary), .1);
 	font-weight: bolder;
 }
