--- a/src/lib/components/select/_styles.less
+++ b/src/lib/components/select/_styles.less
@@ -183,8 +183,8 @@
 }
 
 .ant-select-multiple .ant-select-selection-item {
-	background: rgba(var(--coo-rgb-secondary-01), 0.35);
-	border:none;
+	background: rgba(var(--coo-rgb-secondary-01), .35);
+	border: none;
 }
 
 // Antd4 styles
