--- a/src/styles/_colors.less
+++ b/src/styles/_colors.less
@@ -46,6 +46,7 @@
 	--coo-rgb-special-green: 94, 255, 0; // #5eff00
 	--coo-rgb-special-dark-grey: 18, 16, 16;// #121010
 
+	--coo-rgb-error-dark: 255, 56, 56;  // #FF3838
 
 	// * * * * LIGHT MODE COLORS BASE - to use as color variable * * * *
 
@@ -91,6 +92,7 @@
 		--coo-white-bk: rgb(var(--coo-rgb-secondary-dark));
 		--coo-secondary-04: rgb(var(--coo-rgb-dark));
 		--coo-secondary-03: rgb(var(--coo-rgb-secondary));
+		--coo-error: rgb(var(--coo-rgb-error-dark));
 	}
 }
 
