--- a/src/lib/components/data-table/_styles.less
+++ b/src/lib/components/data-table/_styles.less
@@ -234,10 +234,10 @@
 				}
 
 				&--primary-light {
-					background-color: var(--coo-primary-04);
+					background-color: rgba(var(--coo-rgb-primary), .1);
 
 					td {
-						color: rgb(var(--coo-rgb-dark));
+						color: var(--coo-dark);
 					}
 				}
 
