--- a/src/lib/components/board/_styles.less
+++ b/src/lib/components/board/_styles.less
@@ -290,7 +290,7 @@
 		}
 
 		&-primary-light {
-			background: var(--coo-primary-04);
+			background-color: rgba(var(--coo-rgb-primary), .1);
 		}
 
 		&-secondary {
