--- a/src/lib/components/select/_styles.less
+++ b/src/lib/components/select/_styles.less
@@ -177,6 +177,16 @@
 	}
 }
 
+
+.ant-select:not(.ant-select-customize-input) .ant-select-selector {
+	border-color: var(--coo-secondary-03);
+}
+
+.ant-select-multiple .ant-select-selection-item {
+	background: rgba(var(--coo-rgb-secondary-01), .35);
+	border: none;
+}
+
 // Antd4 styles
 .ant-select-item-option {
 	&-selected:not(.ant-select-item-option-disabled) {
