feat: change bg color

--- a/src/lib/components/board/_styles.less
+++ b/src/lib/components/board/_styles.less
@@ -303,7 +303,7 @@
 
 		&-error {
 			color: var(--coo-error);
-			background-color: var(--coo-alert-bk);
+			background-color: rgb(255 5 5 / 3%);
 		}
 	}
 
