--- a/src/lib/components/data-table/_styles.less
+++ b/src/lib/components/data-table/_styles.less
@@ -26,7 +26,7 @@
 		gap: 1rem;
 		display: flex;
 		flex-direction: row;
-		justify-content: flex-end;
+		justify-content: var(--data-table-action-justify-content, flex-end);
 
 		&--noHide {
 			opacity: 1;
