feat: add anchor component

--- a/src/styles/_components.less
+++ b/src/styles/_components.less
@@ -1,6 +1,7 @@
 
 @import 'alert/_styles';
 @import 'alert-legacy/_styles';
+@import 'anchor/_styles';
 @import 'avatar/_styles';
 @import 'bar-chart/_styles';
 @import 'board/_styles';
