feat: Add disable prop to <StatusSelector /> (#25)
* feat: add disabled prop

* fix: less

---------

Co-authored-by: Luca Tagliabue <luca.tagliabue@radicalbit.io>

--- a/src/lib/components/status-selector/_styles.less
+++ b/src/lib/components/status-selector/_styles.less
@@ -6,6 +6,12 @@
 	color: var(--coo-dark);
 
 
+	&--disabled {
+		opacity: .4;
+		cursor: default;
+		pointer-events: none;
+	}
+
 	&__label {
 		font-size: @rdb-font-size-xs;
 		line-height: 1.3;
