feat(ui): add new classes to various styles

--- a/src/lib/components/button/_styles.less
+++ b/src/lib/components/button/_styles.less
@@ -234,3 +234,11 @@
 		}
 	}
 }
+
+/*
+.m-button[disabled],
+.ant-btn[disabled] {
+	border-radius: inherit;
+	color: var(--coo-secondary-01);
+}
+ */
