--- a/src/lib/components/header/_styles.less
+++ b/src/lib/components/header/_styles.less
@@ -34,7 +34,7 @@
 	&__title {
 		display: flex;
 		flex-direction: column;
-		justify-content: center;
+		justify-content: unset;
 		align-items: flex-start;
 		order: 1;
 		flex-grow: 1;
