--- a/src/lib/components/layout/_styles.less
+++ b/src/lib/components/layout/_styles.less
@@ -6,6 +6,14 @@
 
 .rdb-layout,
 .cona-theme {
+	.cona-l-sider {
+		background-color: var(--coo-white-bk);
+
+		&__header {
+			border-bottom: 0;
+		}
+	}
+
 	.ant-layout {
 		background: var(--coo-dark) !important;
 	}
