--- a/src/lib/components/layout/secondary-column/_styles.less
+++ b/src/lib/components/layout/secondary-column/_styles.less
@@ -1,5 +1,5 @@
 .rdb-layout-secondary-column {
-	background-color: var(--coo-secondary-04);
+	background-color: var(--coo-white-bk);
 	color: var(--coo-secondary);
 	left: 0;
 	max-width: @rdb-layout-secondary-column-width !important;
@@ -80,7 +80,7 @@
 	.l-secondary-column {
 		&__header {
 			height: 5rem;
-			border-bottom: 1px solid var(--coo-secondary-03);
+			border-bottom: 0;
 			border-right: 1px solid var(--coo-secondary-03);
 		}
 
