--- a/src/lib/components/tabs/_styles.less
+++ b/src/lib/components/tabs/_styles.less
@@ -22,6 +22,7 @@
 				padding: .5rem 1rem;
 				font-size: 1rem;
 				line-height: 1.15;
+				border-bottom: 1px solid var(--coo-secondary-03);
 
 				&-active {
 					font-weight: var(--coo-font-weight-bold);
