--- a/src/lib/components/tag/_styles.less
+++ b/src/lib/components/tag/_styles.less
@@ -2,7 +2,7 @@
 	align-items: center;
 	background-color: transparent;
 	border-color: var(--coo-primary);
-	border-radius: 1rem;
+	border-radius: var(--coo-border-radius-small);
 	color: var(--coo-primary);
 	display: flex;
 	font-size: .8rem;
