--- a/src/styles/_components.less
+++ b/src/styles/_components.less
@@ -60,6 +60,7 @@
 @import 'row/_styles';
 @import 'section-title/_styles';
 @import 'select/_styles';
+@import 'skeleton/_styles';
 @import 'slider/_styles';
 @import 'spin/_styles';
 @import 'spinner/_styles';
