--- a/src/styles/_theme.less
+++ b/src/styles/_theme.less
@@ -18,7 +18,7 @@ html {
 }
 
 a {
-	color: var(--coo-primary);
+	color:var(--coo-dark);
 	cursor: pointer;
 
 	svg {
@@ -139,6 +139,8 @@ a:hover {
 }
 
 .ant-btn {
+	border-radius: var(--coo-border-radius-small);
+
 	&:focus {
 		color: var(--coo-primary-03);
 		border-color: var(--coo-primary-03);
