--- a/src/lib/components/board/_styles.less
+++ b/src/lib/components/board/_styles.less
@@ -1,7 +1,6 @@
 .l-board {
 	display: flex;
 	flex-direction: column;
-	border-radius: 1rem;
 	background-color: var(--coo-white-bk);
 	color: var(--coo-dark);
 	padding: 1.5rem;
@@ -9,6 +8,7 @@
 	line-height: 1.2;
 	position: relative;
 	border: 1px solid var(--coo-secondary-03);
+	border-radius: var(--coo-border-radius-small);
 	min-height: 0;
 
 	&:hover {
