--- a/src/lib/components/layout/left-column/_styles.less
+++ b/src/lib/components/layout/left-column/_styles.less
@@ -8,9 +8,9 @@
 			justify-content: center;
 			align-items: center;
 			font-weight: var(--coo-font-weight-bold);
-			border-bottom: 1px solid var(--coo-secondary-03);
 			overflow: hidden;
 			transition: all .2s;
+			border-bottom: 0;
 
 			a {
 				display: block;
