--- a/src/lib/components/layout/main-column/_styles.less
+++ b/src/lib/components/layout/main-column/_styles.less
@@ -11,7 +11,7 @@
 		left: 0;
 		right: @rdb-right-sidebar-width;
 		z-index: 1;
-		border-bottom: 1px solid var(--coo-secondary-03);
+		border-bottom: 0;
 		background-color: var(--coo-white-bk);
 		color: var(--coo-dark);
 		max-height: @rdb-header-height;
