--- a/src/lib/components/skeleton/_styles.less
+++ b/src/lib/components/skeleton/_styles.less
@@ -1,50 +1,48 @@
 
-.ant-skeleton-active{
-
-	.ant-skeleton-input{
+.ant-skeleton-active {
+	.ant-skeleton-input {
 		background: rgba(var(--coo-rgb-secondary-03), 0);
 
-		&:after{
+		&::after {
 			background: linear-gradient(90deg, rgba(var(--coo-rgb-secondary-03), .5) 25%, rgba(var(--coo-rgb-secondary-03), 1) 37%, rgba(var(--coo-rgb-secondary-03), .2) 63%);
 			border-radius: var(--coo-border-radius-small);
 		}
 	}
 
-	.ant-skeleton-title{
-		&:after{
+	.ant-skeleton-title {
+		&::after {
 			background: linear-gradient(90deg, rgba(var(--coo-rgb-secondary-03), .5) 25%, rgba(var(--coo-rgb-secondary-03), 1) 37%, rgba(var(--coo-rgb-secondary-03), .2) 63%);
 			border-radius: var(--coo-border-radius-small);
 		}
 	}
 
-	.ant-skeleton-paragraph{
-		> li::after{
+	.ant-skeleton-paragraph {
+		> li::after {
 			background: linear-gradient(90deg, rgba(var(--coo-rgb-secondary-03), .5) 25%, rgba(var(--coo-rgb-secondary-03), 1) 37%, rgba(var(--coo-rgb-secondary-03), .2) 63%);
 			border-radius: var(--coo-border-radius-small);
 		}
 	}
 
-	.ant-skeleton-avatar{
+	.ant-skeleton-avatar {
 		background: rgba(var(--coo-rgb-secondary-03), 0);
-		
-		&:after{
+
+		&::after {
 			background: linear-gradient(90deg, rgba(var(--coo-rgb-secondary-03), .5) 25%, rgba(var(--coo-rgb-secondary-03), 1) 37%, rgba(var(--coo-rgb-secondary-03), .2) 63%);
 			border-radius: var(--coo-border-radius-small);
 		}
 	}
 
-	.ant-skeleton-button{
-		&:after{
+	.ant-skeleton-button {
+		&::after {
 			background: linear-gradient(90deg, rgba(var(--coo-rgb-secondary-03), .5) 25%, rgba(var(--coo-rgb-secondary-03), 1) 37%, rgba(var(--coo-rgb-secondary-03), .2) 63%);
 			border-radius: var(--coo-border-radius-small);
 		}
 	}
 
-	.ant-skeleton-image{
-		&:after {
+	.ant-skeleton-image {
+		&::after {
 			background: linear-gradient(90deg, rgba(var(--coo-rgb-secondary-03), .5) 25%, rgba(var(--coo-rgb-secondary-03), 1) 37%, rgba(var(--coo-rgb-secondary-03), .2) 63%);
-		border-radius: var(--coo-border-radius-small);
+			border-radius: var(--coo-border-radius-small);
 		}
 	}
-
-} 
+}
