feat: add new styles (#28)
* feat(ui): add new classes to various styles

* feat(ui): less autofix

* feat: fix button disabled style

* feat: less autofix

--- a/src/lib/components/button/_styles.less
+++ b/src/lib/components/button/_styles.less
@@ -214,11 +214,10 @@
 
 	&[disabled] {
 		background: transparent;
-		border: 1.25px dashed var(--coo-secondary-03);
+		border-radius: inherit;
+		color: var(--coo-secondary-01);
 		box-sizing: border-box;
-		border-radius: 16px;
 		font-style: italic;
-		color: var(--coo-secondary-03);
 
 		&:hover {
 			border-color: var(--coo-secondary-03);
@@ -234,3 +233,4 @@
 		}
 	}
 }
+
