fix: remove pointer from Avatar and fix Button disabled border

--- a/src/lib/components/button/_styles.less
+++ b/src/lib/components/button/_styles.less
@@ -214,6 +214,7 @@
 
 	&[disabled] {
 		background: transparent;
+		border: 1.25px dashed var(--coo-secondary-03);
 		border-radius: inherit;
 		color: var(--coo-secondary-01);
 		box-sizing: border-box;
