fix: add var into body

--- a/src/styles/_typography.less
+++ b/src/styles/_typography.less
@@ -3,13 +3,14 @@
 :root,
 html body {
 	--coo-body-font: 'Open Sans', sans-serif;
-	--coo-header-font: 'Montserrat', sans-serif;
+	--coo-header-font: 'Open Sans', sans-serif;
 	--coo-monospace-font: Monaco, Menlo, "Ubuntu Mono", Consolas, source-code-pro, monospace;
 	--coo-font-weight-lighter: 200;
 	--coo-font-weight-light: 300;
 	--coo-font-weight-normal: 500;
 	--coo-font-weight-bold: 600;
 	--coo-font-weight-bolder: 700;
+	--coo-border-radius-small: .3rem;
 }
 
 @font-family: var(--coo-body-font);
