feat: remove <ErrorBoundary /> and <ListBox />

--- a/src/lib/components/tag/_styles.less
+++ b/src/lib/components/tag/_styles.less
@@ -209,10 +209,23 @@
 	}
 
 	&--animated {
-		position: relative;
-		overflow: hidden;
-		.textShadow();
-		.old-movie();
+		&-default {
+			position: relative;
+			overflow: hidden;
+			.textShadow();
+			.old-movie();
+		}
+		
+		&-onHover {
+			&:hover {
+				transition: all .8s linear;
+				background: var(--coo-highlight);
+				color: rgb(var(--coo-rgb-primary-dark));
+				.c-tag--error {
+					border-color: var(--coo-highlight);
+				}
+			}
+		}
 	}
 
 	&__mode {
