--- a/src/styles/_colors.less
+++ b/src/styles/_colors.less
@@ -14,7 +14,7 @@
 	--coo-rgb-primary-03: 229, 241, 250; //#E5F1FA rgba(229, 241, 250, 1)
 	--coo-rgb-primary-04: 241, 249, 255; //#F1F9FF rgba(241, 249, 255, 1)
 	// secondaries
-	--coo-rgb-secondary-dark: 39, 52, 75; //#3E3E3E rgba(62, 62, 62, 1)
+	--coo-rgb-secondary-dark: 48 55 65; //#303741 rgba(48, 55, 65, 1)
 	--coo-rgb-secondary: 67, 76, 107; //#4B4F54 rgba(75, 79, 84, 1)
 	--coo-rgb-secondary-01: 144, 152, 180; //#9B99A1 rgba(155, 153, 161, 1)
 	--coo-rgb-secondary-02: 205, 207, 226; //#CCC9D4 rgba(204, 201, 212, 1)
