--- a/src/lib/components/board/_styles.less
+++ b/src/lib/components/board/_styles.less
@@ -15,7 +15,7 @@
 		.l-header {
 			&__actions {
 				opacity: 1;
-				transition: @ease-base-in;
+				// transition: @ease-base-in;
 			}
 		}
 	}
@@ -27,7 +27,7 @@
 
 			&__actions {
 				opacity: 0;
-				transition: @ease-base-out;
+				// transition: @ease-base-out;
 				font-size: 1rem;
 				flex-direction: row;
 				gap: .8rem;
