--- a/src/lib/components/crunched/_styles.less
+++ b/src/lib/components/crunched/_styles.less
@@ -11,7 +11,7 @@
 		background: var(--coo-white);
 		position: absolute;
 		z-index: 100;
-		padding: @padding-xs / 4 @padding-xs;
+		padding: @rdb-padding-xs / 4 @rdb-padding-xs;
 		border: 1px solid;
 		left: .2rem;
 		top: -.7rem;
