--- a/src/lib/components/data-table/_styles.less
+++ b/src/lib/components/data-table/_styles.less
@@ -120,7 +120,7 @@
 
 				.w-action {
 					opacity: 1;
-					transform: @ease-base-in;
+					// transform: @ease-base-in;
 				}
 
 				&.l-data-table__row {
@@ -141,7 +141,7 @@
 
 
 			.rdb-row-with-actions-content {
-				padding-bottom: @padding-xs;
+				padding-bottom: @rdb-padding-xs;
 				font-size: @rdb-font-size-base;
 
 				a {
