--- a/src/lib/components/dropdown/_styles.less
+++ b/src/lib/components/dropdown/_styles.less
@@ -3,7 +3,7 @@
 		.ant-dropdown-menu-item {
 			color: var(--coo-secondary);
 			font-size: @rdb-font-size-s;
-			padding: @padding-xs @rdb-padding-default;
+			padding: @rdb-padding-xs @rdb-padding-default;
 			font-weight: var(--coo-font-weight-light);
 
 			&-disabled {
