--- a/src/lib/components/map-marker/_styles.less
+++ b/src/lib/components/map-marker/_styles.less
@@ -25,7 +25,7 @@
 			min-width: 2rem;
 			min-height: 2rem;
 			color: var(--coo-white);
-			background: fade(@secondary-color, 40%);
+			background: var(--coo-secondary-01);
 			border-radius: 50%;
 			text-align: center;
 			font-size: 1.25rem;
