--- a/src/lib/components/steps/_styles.less
+++ b/src/lib/components/steps/_styles.less
@@ -80,8 +80,8 @@
 
 			.ant-steps-item-error {
 				.ant-steps-item-icon {
-					background: @error-color;
-					border-color: @error-color;
+					background: var(--coo-error);
+					border-color: var(--coo-error);
 
 					.ant-steps-icon {
 						color: var(--coo-white);
