--- a/src/styles/_theme.less
+++ b/src/styles/_theme.less
@@ -451,13 +451,13 @@ a:hover {
 
 @rdb-layout-right-column-visible-above: 992px;
 
-@rdb-padding-default: @padding-md; // default padding
-@rdb-padding-small: @padding-sm; // left and right sidebar and padding for small elements
-@rdb-padding-xs: @padding-xs;
+@rdb-padding-default: 1rem; // @padding-md; default padding
+@rdb-padding-small: .75rem; // @padding-sm; left and right sidebar and padding for small elements
+@rdb-padding-xs: .5rem; // @padding-xs;
 
-@rdb-margin-default: @padding-md; // default margin
-@rdb-margin-small: @padding-sm; // left and right sidebar and padding for small elements
-@rdb-margin-xs: @padding-xs;
+@rdb-margin-default: 1rem; // @padding-md; default margin
+@rdb-margin-small: .75rem; // @padding-sm; left and right sidebar and padding for small elements
+@rdb-margin-xs: .5rem; // @padding-xs;
 
 @rdb-full: 100%;
 @rdb-half: 50%;
