--- a/src/lib/components/layout/secondary-column/_styles.less
+++ b/src/lib/components/layout/secondary-column/_styles.less
@@ -53,7 +53,7 @@
 
 	.page-title {
 		height: @rdb-header-height !important;
-		padding: @padding-xs @rdb-padding-default;
+		padding: @rdb-padding-xs @rdb-padding-default;
 		border-bottom: 1px solid var(--coo-secondary-03);
 
 		.page-title-content {
