--- a/src/lib/components/tools-box/_styles.less
+++ b/src/lib/components/tools-box/_styles.less
@@ -12,7 +12,7 @@
 
 	.c-tools-box__top {
 		&.dragger-box {
-			padding: 0 @padding-xs;
+			padding: 0 @rdb-padding-xs;
 			height: 1.5rem;
 
 			svg {
