--- a/src/lib/components/slider/_styles.less
+++ b/src/lib/components/slider/_styles.less
@@ -7,6 +7,16 @@
 		opacity: .8;
 	}
 
+	&:hover {
+		.ant-slider-track {
+			background-color: var(--coo-primary);
+		}
+
+		.ant-slider-rail {
+			background: var(--coo-secondary-02);
+		}
+	}
+
 	&.ant-slider-disabled {
 		.ant-slider-rail {
 			background-color: var(--coo-secondary-02) !important;
@@ -17,9 +27,26 @@
 		}
 	}
 
+	.ant-slider-rail {
+		background: var(--coo-secondary-02);
+	}
+
+	.ant-slider-track {
+		background-color: var(--coo-primary);
+	}
+
 	.ant-slider-step {
 		.ant-slider-dot {
 			visibility: hidden;
+		}
+	}
+
+	.ant-slider-handle {
+		border: none;
+		background: var(--coo-primary);
+
+		&:focus {
+			box-shadow: none;
 		}
 	}
 
