--- a/src/lib/components/rbit-modal/_styles.less
+++ b/src/lib/components/rbit-modal/_styles.less
@@ -120,6 +120,7 @@
 			gap: 1rem;
 			max-height: 50vh;
 			font-weight: var(--coo-font-weight-light);
+			overflow: scroll;
 		}
 
 		.c-rbit-modal__actions {
