--- a/src/styles/_antd5-migration-fixes.less
+++ b/src/styles/_antd5-migration-fixes.less
@@ -122,7 +122,7 @@ html body {
 	.ant-dropdown .ant-dropdown-menu .ant-dropdown-menu-item-active,
 	.ant-dropdown-menu-submenu .ant-dropdown-menu .ant-dropdown-menu-item-active,
 	.ant-dropdown .ant-dropdown-menu .ant-dropdown-menu-submenu-title-active,
-	.ant-dropdown-menu-submenu .ant-dropdown-menu .ant-dropdown-menu-submenu-title-active, {
+	.ant-dropdown-menu-submenu .ant-dropdown-menu .ant-dropdown-menu-submenu-title-active {
 		background-color: var(--coo-secondary-04);
 	}
 
@@ -135,11 +135,10 @@ html body {
 		box-shadow: 0 0 0 2px var(--coo-primary);
 	}
 
-	.ant-select .ant-select-selection-placeholder {
-		color: rgba(var(--coo-white), .25);
-	}
-
-	.ant-select-outlined.ant-select-multiple .ant-select-selection-item {
-		border: 1px solid transparent;
+	.ant-slider .ant-slider-handle:hover::after,
+	.ant-slider .ant-slider-handle:active::after,
+	.ant-slider .ant-slider-handle:focus::after,
+	.ant-slider:hover .ant-slider-handle::after {
+		box-shadow: 0 0 0 2px var(--coo-primary-01);
 	}
 }
