fix: align rbit-modal styles

--- a/src/lib/components/rbit-modal/_styles.less
+++ b/src/lib/components/rbit-modal/_styles.less
@@ -22,6 +22,7 @@
 					.c-rbit-modal__body {
 						flex: 1;
 						overflow-y: auto;
+						padding: .3rem // To prevent horizontal scroll;
 					}
 				}
 			}
