--- a/src/styles/_antd5-migration-fixes.less
+++ b/src/styles/_antd5-migration-fixes.less
@@ -13,8 +13,8 @@ html body {
 	.ant-table-wrapper .ant-table-column-sorter-down.active,
 	.ant-steps .ant-steps-item:not(.ant-steps-item-active):not(.ant-steps-item-process) > .ant-steps-item-container[role='button']:hover .ant-steps-item-icon .ant-steps-icon,
 	.ant-steps .ant-steps-item:not(.ant-steps-item-active) > .ant-steps-item-container[role='button']:hover .ant-steps-item-title,
-	:where(.css-dev-only-do-not-override-1htoz2s).ant-steps .ant-steps-item:not(.ant-steps-item-active) > .ant-steps-item-container[role='button']:hover .ant-steps-item-subtitle,
-	:where(.css-dev-only-do-not-override-1htoz2s).ant-steps .ant-steps-item:not(.ant-steps-item-active) > .ant-steps-item-container[role='button']:hover .ant-steps-item-description {
+	.ant-steps .ant-steps-item:not(.ant-steps-item-active) > .ant-steps-item-container[role='button']:hover .ant-steps-item-subtitle,
+	.ant-steps .ant-steps-item:not(.ant-steps-item-active) > .ant-steps-item-container[role='button']:hover .ant-steps-item-description {
 		color: var(--coo-primary);
 	}
 
