--- a/src/lib/components/layout/_styles.less
+++ b/src/lib/components/layout/_styles.less
@@ -15,7 +15,7 @@
 	}
 
 	.ant-layout {
-		background: var(--coo-dark) !important;
+		background: var(--coo-white-bk) !important;
 	}
 
 	// general antd classes
