--- a/src/styles/_antd5-migration-fixes.less
+++ b/src/styles/_antd5-migration-fixes.less
@@ -115,7 +115,6 @@ html body {
 
 
 	.ant-switch.ant-switch-checked:hover:not(.ant-switch-disabled),
-	.ant-select-outlined.ant-select-multiple .ant-select-selection-item,
 	.ant-steps .ant-steps-item-finish > .ant-steps-item-container > .ant-steps-item-content > .ant-steps-item-title::after {
 		background-color: var(--coo-primary);
 	}
@@ -131,10 +130,7 @@ html body {
 		background-color: var(--coo-secondary-04);
 	}
 
-	::selection,
-	input::placeholder {
-		color: var(--coo-white) !important;
-	}
+
 
 	.ant-slider .ant-slider-handle::after {
 		box-shadow: 0 0 0 2px var(--coo-primary);
@@ -148,8 +144,10 @@ html body {
 	}
 
 	.ant-select .ant-select-selection-placeholder {
-		color: rgba(var(--coo-white-bk), .25);
+		color: var(--coo-dark-bk);
+		opacity: .25;
 	}
+	  
 
 	.ant-select-outlined.ant-select-multiple .ant-select-selection-item {
 		border: 1px solid transparent;
@@ -163,4 +161,27 @@ html body {
 	.ant-steps .ant-steps-item-wait > .ant-steps-item-container > .ant-steps-item-content > .ant-steps-item-title::after {
 		background-color: var(--coo-secondary-02);
 	}
+
+	ul{
+		color:var(--coo-dark)
+	  }
+	  
+	  
+	  ::selection{
+		color: var(--coo-dark) !important;
+	  }
+	  
+	  input::placeholder {
+		color: var(--coo-dark) !important;
+		opacity: .25;
+	  }
+	  
+	  .ant-transfer .ant-transfer-list-content-item-checked{
+		background-color: var(--coo-primary-01);
+	  
+		> .ant-transfer-list-content-item-text{
+		  color: var(--coo-white-bk);
+		}
+		
+	  }
 }
