--- a/src/styles/_antd5-migration-fixes.less
+++ b/src/styles/_antd5-migration-fixes.less
@@ -131,7 +131,6 @@ html body {
 	}
 
 
-
 	.ant-slider .ant-slider-handle::after {
 		box-shadow: 0 0 0 2px var(--coo-primary);
 	}
@@ -147,7 +146,7 @@ html body {
 		color: var(--coo-dark-bk);
 		opacity: .25;
 	}
-	  
+
 
 	.ant-select-outlined.ant-select-multiple .ant-select-selection-item {
 		border: 1px solid transparent;
@@ -162,26 +161,25 @@ html body {
 		background-color: var(--coo-secondary-02);
 	}
 
-	ul{
-		color:var(--coo-dark)
-	  }
-	  
-	  
-	  ::selection{
+	ul {
+		color: var(--coo-dark);
+	}
+
+
+	::selection {
 		color: var(--coo-dark) !important;
-	  }
-	  
-	  input::placeholder {
+	}
+
+	input::placeholder {
 		color: var(--coo-dark) !important;
 		opacity: .25;
-	  }
-	  
-	  .ant-transfer .ant-transfer-list-content-item-checked{
+	}
+
+	.ant-transfer .ant-transfer-list-content-item-checked {
 		background-color: var(--coo-primary-01);
-	  
-		> .ant-transfer-list-content-item-text{
-		  color: var(--coo-white-bk);
+
+		> .ant-transfer-list-content-item-text {
+			color: var(--coo-white-bk);
 		}
-		
-	  }
+	}
 }
