fix: tabs and font family

--- a/src/styles/_antd5-migration-fixes.less
+++ b/src/styles/_antd5-migration-fixes.less
@@ -182,4 +182,9 @@ html body {
 			color: var(--coo-white-bk);
 		}
 	}
+
+	[class^="ant-tabs"],
+	[class*=" ant-tabs"] {
+		font-family: var(--coo-body-font);
+	}
 }
