feat: data table row light

--- a/src/lib/components/data-table/_styles.less
+++ b/src/lib/components/data-table/_styles.less
@@ -318,6 +318,17 @@
 						}
 					}
 				}
+
+				&--light {
+					th,
+					td {
+						border-bottom: 0;
+
+						&:first-child {
+							padding-left: 0;
+						}
+					}
+				}
 			}
 		}
 	}
